# anno

./: .env.example  .gitignore  .ignore  Cargo.toml  Makefile  README.md  action.yml
.github/workflows/: release-action.yml  release-api.yml  release.yml  run-test.yml
action/: Cargo.toml  README.md  action.yml
action/src/: ai.rs  git.rs  main.rs  slack.rs  target_paths.rs  workflows.rs
api/: Cargo.toml  README.md
api/src/: main.rs
api/src/ai/: mod.rs  pr_review.rs  pr_summary.rs  test_cases.rs
api/src/middleware/: validation.rs
api/src/routes/: mod.rs
api/src/routes/github/: pull_request.rs  workflow.rs
api/src/routes/jira/: issue.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/ai/: chat_gpt.rs  claude.rs  mod.rs  prompts.rs
common/src/services/: jira.rs  mod.rs  slack.rs
common/src/utils/: config.rs  mod.rs
example_workflow_events/: capi_homepage_usps_update.json  notifications_nudge.json  product_search_options_change.json  query_string_bug_fix.json
github_action/: Cargo.toml  action.yml
github_action/src/: main.rs
shared/: Cargo.toml
shared/src/ai/: chat_gpt.rs  claude.rs  mod.rs  prompts.rs  schemas.rs
shared/src/services/: chat_gpt.rs  claude.rs  git.rs  github.rs  jira.rs  mod.rs  slack.rs
shared/src/services/github/: access_token.rs  mod.rs  pull_request.rs  repository.rs  workflow.rs
shared/src/utils/: commits.rs  config.rs  error.rs  jwt.rs  mod.rs
src/: main.rs
src/ai/: chat_gpt.rs  claude.rs  mod.rs  prompt.rs  prompts.rs
src/middleware/: validation.rs
src/routes/: deployments.rs  mod.rs  pull_request.rs  workflow.rs
src/routes/github/: pull_request.rs  workflow.rs
src/routes/jira/: issue.rs
src/services/: chat_gpt.rs  git.rs  github.rs  jira.rs  mod.rs  slack.rs
src/services/ai/: chat_gpt.rs  claude.rs  prompt.rs
src/utils/: config.rs  error.rs  jwt.rs
