[workspace]
default-members = [
  "api",
  "action",
  "shared",
]
members = [
  "api",
  "shared",
  "action",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
base64 = "0.22.1"
futures = "0.3.30"
hyper = "1.3.1"
reqwest = {version = "0.12.4", features = ["json"]}
serde = "1.0.202"
serde_json = "1.0.117"
shared = {path = "shared"}
time = {version = "0.3.36", features = ["local-offset"]}
tokio = {version = "1.38.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["time"]}
