[workspace]
default-members = [
  "api",
  "action",
  "shared",
]
members = [
  "api",
  "shared",
  "action",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
futures = "0.3.31"
hyper = "1.5.2"
regex-lite = "0.1.6"
reqwest = {version = "0.12.12", features = ["json"]}
serde = "1.0.217"
serde_json = "1.0.134"
shared = {path = "shared"}
time = {version = "0.3.37", features = ["local-offset"]}
tokio = {version = "1.42.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["time"]}
