[workspace]
default-members = [
  "api",
  "action",
  "shared",
]
members = [
  "api",
  "shared",
  "action",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
futures = "0.3.31"
hyper = "1.6.0"
regex-lite = "0.1.6"
reqwest = {version = "0.12.20", features = ["json"]}
serde = "1.0.219"
serde_json = "1.0.140"
shared = {path = "shared"}
time = {version = "0.3.41", features = ["local-offset"]}
tokio = {version = "1.45.1", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["time"]}
