[package]
edition = "2024"
name = "action"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
git2 = "0.19.0"
glob = "0.3.2"
openssl = {version = "0.10.64", features = ["vendored"]}
regex-lite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
shared.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
