[package]
edition = "2024"
name = "api"
version = "0.1.0"

[[bin]]
name = "api"

[dependencies]
anyhow.workspace = true
axum-aws-lambda = "0.9.0"
axum.workspace = true
futures.workspace = true
hex = "0.4.3"
hmac-sha256 = "1.1.8"
hyper.workspace = true
lambda_http = "0.13.0"
regex-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1.16"
shared.workspace = true
subtle = "2.6.1"
time.workspace = true
tokio.workspace = true
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "trace"]}
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = {version = "1.11.0", features = ["v4"]}

[package.metadata.lambda.deploy]
tags = {"Name" = "anno", "Env" = "prod"}
timeout = 300
