[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono = "0.4.38"
dotenv = "0.15.0"
futures.workspace = true
hex = "0.4.3"
hyper.workspace = true
jsonwebtoken = "9.3.0"
openssl = {version = "0.10.64", features = ["vendored"]}
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
